--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,9 +14,9 @@
       <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
       <a href="http://scidash.org" class="btn">Home</a>
-      <a href="Examples" class="btn">Examples</a>
-      <a href="Projects" class="btn">Projects Using NeuronUnit</a>
-      <a href="Contact" class="btn">Contact</a>
+      <a href="examples.html" class="btn">Examples</a>
+      <a href="projects.html" class="btn">Projects Using NeuronUnit</a>
+      <a href="contact.html" class="btn">Contact</a>
       <!--
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
