--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
     <section class="page-header">
       <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
-      <a href="http://scidash.org" class="btn">Home</a>
+      <a href="index.html" class="btn">Home</a>
       <a href="examples.html" class="btn">Examples</a>
       <a href="projects.html" class="btn">Projects Using NeuronUnit</a>
       <a href="contact.html" class="btn">Contact</a>
