--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
       <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
       <a href="index.html" class="btn">Home</a>
-      <a href="sciunit-examples.html" class="btn">SciUnit Examples</a>
+      <a href="sciunit-examples.html" class="btn">About SciUnit</a>
       <a href="neuronunit-examples.html" class="btn">NeuronUnit Examples</a>
       <a href="projects.html" class="btn">Projects Using NeuronUnit</a>
       <a href="contact.html" class="btn">Contact</a>
