--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
       <a href="sciunit-examples.html" class="btn">SciUnit</a>
       <a href="neuronunit-examples.html" class="btn">NeuronUnit</a>
       <a href="projects.html" class="btn">Projects Using NeuronUnit</a>
-      <a href="contact.html" class="btn">Contact</a>
+      <a href="contact.html" class="btn">About Us</a>
       <!--
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
