Moved content around and added key features

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,7 @@
       <a href="index.html" class="btn">Home</a>
       <a href="sciunit.html" class="btn">SciUnit</a>
       <a href="neuronunit.html" class="btn">NeuronUnit</a>
+      <a href="portal.html" class="btn">Portal</a>
       <a href="contact.html" class="btn">About Us</a>
     </section>
 
