--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,3 +6,8 @@
 .main-content table td {
     border: 0px; 
 }
+
+.page-header { color: #fff; text-align: center; background-color: #159957; background-image: linear-gradient(120deg, #991537, #159957); }
+@media screen and (min-width: 64em) { .page-header { padding: 3rem 4rem; } }
+@media screen and (min-width: 42em) and (max-width: 64em) { .page-header { padding: 3rem 4rem; } }
+@media screen and (max-width: 42em) { .page-header { padding: 2rem 1rem; } }
