--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,8 +32,7 @@
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
       <a href="index.html" class="btn">Home</a>
       <a href="sciunit.html" class="btn">SciUnit</a>
-      <a href="neuronunit.html" class="btn">NeuronUnit</a>
-      <a href="portal.html" class="btn">Portal</a>
+      <a href="scidash.html" class="btn">SciDash</a>
       <a href="contact.html" class="btn">About Us</a>
     </section>
 
